[package]
name = "thiserror"
version = "1.0.32"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns"]
description = "derive(Error)"
documentation = "https://docs.rs/thiserror"
edition = "2018"
keywords = ["error", "error-handling", "derive"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/thiserror"
rust-version = "1.31"

[dependencies]
thiserror-impl = { version = "=1.0.9", path = "impl" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[dev-dependencies]
#anyhow = "1.0"
#ref-cast = "1.0"
#rustversion = "1.0"
#trybuild = { version = "1.0.19", features = ["diff"] }

[workspace]
members = ["impl"]
